# pico-neuron-serial

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: pico-neuron-serial.cpp.D243CC3CD39CE136.idx  pico-reader-cpp.cpp.2923C3539125C0DA.idx
scripts/: give_rt_privs.bash  plot_model.py
src/: pico-neuron-serial.cpp
